# wetware

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.html  REVIEW.md  SECURITY.md  codecov.yml
.github/workflows/: codecov.yaml  release-please.yml  rust.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/: README.md  STYLE.md  glossary.md
docs/architecture/: README.md
docs/flows/: delete-thought.md  edit-thought.md  entity-alias-resolution.md  entity-rename.md  tui-entity-filter.md
docs/systems/: cli.md  config.md  entry-points.md  errors.md  input.md  models.md  services.md  storage.md  tui.md
docs/templates/: adr.md  flow.md  system.md
specs/: 001-networked-notes.md  002-entity-descriptions.md  006-tui-viewer.md  007-data-directory.md  008-delete-thoughts.md  009-config-command.md  010-entity-rename.md  011-entity-show.md  012-entity-relations.md
specs-new/: 003-styled-entity-output.md  004-entity-reference-aliases.md  005-edit-thoughts.md
specs/001-entity-descriptions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-networked-notes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-styled-entity-output/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-entity-reference-aliases/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.rs  lib.rs  main.rs
tests/: cli.rs  contract_tests.rs  integration_cli.rs  integration_cli_add.rs  integration_cli_edit.rs  integration_cli_entities.rs  integration_cli_thoughts.rs  integration_tests.rs  test_helpers.rs
vibes/: 000_bootstrap.md
(+115 files in other folders)
