[package]
name = "wetware"
version = "1.0.0"
edition = "2024"
description = "Track, organize, and process thoughts"
license = "Apache-2.0"

[[bin]]
name = "wet"
path = "src/main.rs"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
regex = "1.12"
thiserror = "2.0"
owo-colors = { version = "4", features = ["supports-colors"] }

[dev-dependencies]
tempfile = "3.14"
