[package]
name = "wetware"
version = "1.0.0"
edition = "2024"
description = "Track, organize, and process thoughts"
license = "Apache-2.0"

[[bin]]
name = "wet"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
regex = "1.12"
thiserror = "2.0"
owo-colors = { version = "4", features = ["supports-colors"] }
terminal_size = "0.4"
tempfile = "3.27"
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
ratatui = "0.30"
tui-input = "0.15"
nucleo-matcher = "0.3"

[dev-dependencies]
tempfile = "3.27"
